[gd_scene load_steps=14 format=2]

[ext_resource path="res://MainWorld/tileset.png" type="Texture" id=1]
[ext_resource path="res://SkyWorld/CloudGate.png" type="Texture" id=2]
[ext_resource path="res://SkyWorld/cloudarea.png" type="Texture" id=3]
[ext_resource path="res://SkyWorld/CloudExit.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://SkyWorld/opengate.png" type="Texture" id=6]
[ext_resource path="res://SkyWorld/SkyBackground.png" type="Texture" id=7]
[ext_resource path="res://SkyWorld/CloudArea.gd" type="Script" id=8]
[ext_resource path="res://Enemies/Somethingcloud.tscn" type="PackedScene" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 16, 16, 0.132484, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=2]
0/name = "tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 129, 66 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tileset.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 1 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="StreamTexture" id=3]
load_path = "res://.import/CloudCover.png-162baea92253f0a5fb25ac312fb5b172.stex"

[sub_resource type="CircleShape2D" id=4]
radius = 36.0555

[node name="CloudArea" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 8 )

[node name="CloudBackground" type="TextureRect" parent="."]
margin_left = 160.0
margin_top = -90.0
margin_right = 1019.0
margin_bottom = 90.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="TileMap" type="TileMap" parent="CloudBackground"]
position = Vector2( -160, 90 )
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( -393227, 1, 0, -393226, 1, 0, -393225, 1, 0, -393224, 1, 0, -393223, 1, 0, -393222, 1, 0, -393221, 1, 0, -393220, 1, 0, -393219, 1, 0, -393218, 1, 0, -393217, 1, 0, -458752, 1, 0, -458751, 1, 0, -458750, 1, 0, -458749, 1, 0, -458748, 1, 0, -458747, 1, 0, -458746, 1, 0, -458745, 1, 0, -458744, 1, 0, -458743, 1, 0, -458742, 1, 0, -458741, 1, 0, -458740, 1, 0, -458739, 1, 0, -458738, 1, 0, -458737, 1, 0, -458736, 1, 0, -458735, 1, 0, -458734, 1, 0, -458733, 1, 0, -458732, 1, 0, -458731, 1, 0, -458730, 1, 0, -458729, 1, 0, -458728, 1, 0, -458727, 1, 0, -458726, 1, 0, -458725, 1, 0, -458724, 1, 0, -458723, 1, 0, -458722, 1, 0, -458721, 1, 0, -458720, 1, 0, -458719, 1, 0, -458718, 1, 0, -458717, 1, 0, -458716, 1, 0, -458715, 1, 0, -458714, 1, 0, -458713, 1, 0, -458712, 1, 0, -458711, 1, 0, -458710, 1, 0, -458709, 1, 0, -458708, 1, 0, -458707, 1, 0, -458706, 1, 0, -458705, 1, 0, -458704, 1, 0, -458703, 1, 0, -458702, 1, 0, -458701, 1, 0, -458700, 1, 0, -458699, 1, 0, -458698, 1, 0, -458697, 1, 0, -458696, 1, 0, -458695, 1, 0, -458694, 1, 0, -458693, 1, 0, -458692, 1, 0, -458691, 1, 0, -458690, 1, 0, -458689, 1, 0, -458688, 1, 0, -327691, 1, 0, -393152, 1, 0, -262155, 1, 0, -327616, 1, 0, -196619, 1, 0, -262080, 1, 0, -131083, 1, 0, -196544, 1, 0, -65547, 1, 0, -131008, 1, 0, -11, 1, 0, -65472, 1, 0, 65525, 1, 0, 64, 1, 0, 131061, 1, 0, 65600, 1, 0, 196597, 1, 0, 196598, 1, 0, 196599, 1, 0, 196600, 1, 0, 196601, 1, 0, 196602, 1, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 1, 0, 131101, 1, 0, 131102, 1, 0, 131103, 1, 0, 131104, 1, 0, 131105, 1, 0, 131106, 1, 0, 131107, 1, 0, 131116, 1, 0, 131117, 1, 0, 131118, 1, 0, 131119, 1, 0, 131120, 1, 0, 131121, 1, 0, 131122, 1, 0, 131123, 1, 0, 131124, 1, 0, 131125, 1, 0, 131126, 1, 0, 131127, 1, 0, 131128, 1, 0, 131129, 1, 0, 131130, 1, 0, 131131, 1, 0, 131132, 1, 0, 131133, 1, 0, 131134, 1, 0, 131135, 1, 0, 131136, 1, 0, 262133, 1, 0, 327669, 1, 0 )

[node name="BlueSky" type="TextureRect" parent="CloudBackground"]
margin_left = -320.0
margin_top = 180.0
margin_right = 859.0
margin_bottom = 441.0
texture = ExtResource( 7 )
stretch_mode = 2

[node name="Opengate" type="Sprite" parent="CloudBackground"]
visible = false
position = Vector2( -254, 88 )
texture = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 520, 40 )

[node name="TopLeft" parent="Player/Camera2D/Limits" index="0"]
position = Vector2( -160, -90 )

[node name="BottomRight" parent="Player/Camera2D/Limits" index="1"]
position = Vector2( 1018, 262 )

[node name="FrontClouds" type="TextureRect" parent="."]
margin_left = -160.0
margin_top = 12.0
margin_right = 1020.0
margin_bottom = 102.0
texture = SubResource( 3 )
stretch_mode = 2

[node name="ElevatorCloud" parent="." instance=ExtResource( 4 )]
position = Vector2( 643, 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -94, -2 )
shape = SubResource( 4 )

[node name="something" parent="." instance=ExtResource( 9 )]
position = Vector2( 412, 10 )

[node name="something2" parent="." instance=ExtResource( 9 )]
position = Vector2( 285, 5 )
velocity = Vector2( -30, 0 )

[node name="something3" parent="." instance=ExtResource( 9 )]
position = Vector2( 82, 10 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]

[editable path="Player"]
[editable path="Player/Hurtbox"]
[editable path="Player/Hitbox"]
